# nblyzer

./: LICENSE  README.md
UI/src/: constants.ts  events.ts  extension.ts  server_handler.ts
framework/: pyproject.toml
framework/nblyzer/src/: benchmarker.py  constants.py  events.py  nblyzer.py  nblyzer_cli.py  nblyzer_server.py
framework/nblyzer/src/IR/: intermediate_representations.py
framework/nblyzer/src/IR/visitors/: __init__.py  assigns_visitor.py  def_use_visitor.py
framework/nblyzer/src/analyses/: analysis.py  dataleak_analysis.py  idle_cell_analysis.py  isolated_cell_analysis.py  stale_cell_analysis.py
framework/nblyzer/src/analyses/abs_domains/dataleak_lattice/: columns.py  data_frame.py  data_frame_sets.py  rows.py
framework/nblyzer/src/analyses/abs_states/: abs_state.py  code_impact_abs_state.py  dataleak_abs_state.py
framework/nblyzer/src/analyses/runner/: analyses_utils.py  analysis_results.py  queue.py  runners.py  stats.py
framework/nblyzer/src/resource_utils/: rsrc_mngr.py  utils.py
framework/tests/: rtests.py  test_dl_abs_state.py  test_events.py  test_idle_cell_analysis.py  test_isolated_cell_analysis.py  test_maintenance.py  test_nblyzer_cli.py  test_stale_cell_analysis.py
