[build-system]
requires = ["setuptools"]

[project]
name = "nblyzer_FL"
version = "0.0.1"
authors = [
  { name="Pavle Subotic", email="psubotic@gmail.com" },
  { name="Filip Drobnjakovic", email="drobnjakovicfilip@gmail.com" },
]
description = "Static analyzer from data science Notebooks"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "beniget == 0.4.1",
    "gast == 0.5.0",
]
